--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,6 +12,7 @@
       <Project>{EE0CC7D7-A1A0-4A16-80E5-8B80B480EB47}</Project>
       <Name>LogComponent</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
